--- a/navbar-sidebar-1/src/styles/abstracts/_vars.scss
+++ b/navbar-sidebar-1/src/styles/abstracts/_vars.scss
@@ -81,3 +81,15 @@ $screen-height-place-limit: 44rem;
 
 $navbar-height: 4rem;
 $app-width: 100vw;
+
+$z-index-a11y: 10000;
+$z-index-modal-content: 801;
+$z-index-modal-overlay: 800;
+$z-index-main-header: 700;
+$z-index-sidebar-mobile: 600;
+$z-index-mid: 500;
+$z-index-nav-menu: 200;
+$z-index-search-results: 101;
+$z-index-low: 100;
+$z-index-search-results-home: 99;
+$z-index-back: -1;
