--- a/navbar-sidebar-1/src/styles/themes/_theme.scss
+++ b/navbar-sidebar-1/src/styles/themes/_theme.scss
@@ -24,6 +24,7 @@ body,
   background: var(--background-primary);
   color: var(--text-primary);
   font-family: "Roboto", sans-serif;
+  width: 100vw;
 }
 
 .light {
